<resources>
    <string name="app_name">BemaCash</string>
    <string name="dashboard_activity_label">BemaCash</string>
    <string name="settings_activity_label">Settings</string>
    <string name="inventory_activity_label">Inventory</string>
    <string name="employees_activity_label">Employees</string>
    <string name="customers_activity_label">Customers</string>
    <string name="add_customer_activity_label">Add Customer</string>
    <string name="employees_edit_activity_label">Edit Employee</string>
    <string name="employees_add_activity_label">New Employee</string>
    <string name="permissions_activity_label">Permissions</string>
    <string name="history_activity_label">History</string>
    <string name="xreport_activity_label">Close Shift Report</string>
    <string name="activation_activity_label">Activation Center</string>
    <string name="signup_activity_label">Sign up</string>
    <string name="printer_alias_label">Printer Alias</string>
    <string name="kds_alias_label">KDS Alias</string>
    <string name="employees_attendance_activity_label">Employees Attendance</string>
    <string name="items_list_empty">No items in the category</string>
    <string name="order_header_title">Name</string>
    <string name="order_header_ean">EAN\\UPC Code</string>
    <string name="order_header_product_code">Product Code</string>
    <string name="order_header_quantiy">Qty</string>
    <string name="order_header_unit_price">Unit Price</string>
    <string name="order_header_discount">Discount</string>
    <string name="order_header_total">Total</string>
    <string name="order_header_quantity">Quantity :</string>
    <string name="refund_header_checkbox">+</string>
    <string name="refund_header_name">Item description</string>
    <string name="refund_header_refQty">Return Qty</string>
    <string name="refund_header_price">Price</string>
    <string name="refund_header_qty">Qty</string>
    <string name="refund_header_total">Total</string>
    <string name="refund_header_max_refund">Refundable Qty</string>
    <string name="refund_confirm_title">Return complete</string>
    <string name="void_confirm_title">Void complete</string>
    <string name="refund_confirm_title_failed">Refund failed</string>
    <string name="wireless_header_oper">Operations</string>
    <string name="wireless_header_status">Status</string>
    <string name="wireless_header_serial">Serial</string>
    <string name="wireless_header_warranty">Warranty</string>
    <string name="wireless_body_warranty">Warranty (days) : </string>
    <string name="warranty_dialog_clarification">Will affect only NEW items</string>
    <string name="prepaid_dialog_category_title">Select Product</string>
    <string name="prepaid_dialog_credentials_title">Specify credentials</string>
    <string name="prepaid_dialog_conditions_title">Choose conditions</string>
    <string name="prepaid_dialog_number_title">Enter phone number</string>
    <string name="prepaid_dialog_progress_title">Billing in progress</string>
    <string name="prepaid_dialog_payment_progress_title">Payment In progress</string>
    <string name="prepaid_dialog_notification_title">Successfully completed</string>
    <string name="prepaid_dialog_or">- or -</string>
    <string name="prepaid_dialog_phone" formatted="false">You chose %s. Please enter the phone number below:</string>
    <string name="prepaid_dialog_custom_amount_hint">Enter custom amount</string>
    <string name="prepaid_dialog_static_amount_hint">Choose Amount</string>
    <string name="prepaid_dialog_amount_no_limitation">No payment amount limitation</string>
    <string name="prepaid_dialog_amount_limitations" formatted="false">Payment min : %s max : %s</string>
    <string name="sunpass_prepaid_dialog_custom_amount_hint">Enter amount</string>
    <string name="prepaid_topup_description">Top Up Items</string>
    <string name="prepaid_pin_description">Pin Items</string>
    <string name="prepaid_dialog_credentials_1">The customer\’s account number with the biller/vendor</string>
    <string name="prepaid_dialog_credentials_1_valiadte">Type the account number again</string>
    <string name="prepaid_dialog_wireless_validate">Retype Telephone number</string>
    <string name="prepaid_dialog_credentials_2">Alternate account number</string>
    <string name="prepaid_dialog_credentials_3">Vendor specific account number</string>
    <string name="prepaid_dialog_credentials_4">Vendor specific profile data</string>
    <string name="prepaid_dialog_credentials_5">Beneficiary first name</string>
    <string name="prepaid_dialog_credentials_6">Beneficiary last name</string>
    <string name="prepaid_dialog_credentials_7">Sender first name</string>
    <string name="prepaid_dialog_credentials_8">Sender last name</string>
    <string name="sunpass_prepaid_dialog_credentials">SunPass Transponder Number</string>
    <string name="sunpass_prepaid_dialog_credentials_validate">Re-enter SunPass Transponder Number</string>
    <string name="sunpass_prepaid_dialog_amount_title">Sunpass amount</string>
    <string name="sunpass_amount_limitation" formatted="false">Min: %s, Max: %s</string>
    <string name="wireless_dialog_cc">Specify country code</string>
    <string name="wireless_dialog_credentials">Telephone number</string>
    <string name="orders_header_num">#</string>
    <string name="orders_header_total">Total</string>
    <string name="orders_header_date">Date</string>
    <string name="orders_header_merchant">Cashier</string>
    <string name="orders_header_gratuity">Gratuity</string>
    <string name="orders_header_status">Status</string>
    <string name="orders_header_tender_type">Tender Type</string>
    <string name="orders_header_prepaid">Pre-paid</string>
    <string name="orders_history_total">Orders found</string>
    <string name="orders_history_from">from</string>
    <string name="orders_history_to">to</string>
    <string name="orders_history_from_to_header">Amount range</string>
    <string name="orders_history_merchant">Cashier:</string>
    <string name="orders_history_order_num">Order#:</string>
    <string name="orders_history_transactions_status">Status:</string>
    <string name="orders_header_sale_date">Sale Date</string>
    <string name="orders_header_order_number">Order Number</string>
    <string name="orders_header_total_price">Total Price</string>
    <string name="orders_header_discount">Discount</string>
    <string name="orders_header_tax">Tax</string>
    <string name="composer_header_item">Composing item</string>
    <string name="composer_header_code">Item product code</string>
    <string name="composer_header_item_qty">Composer Quantity</string>
    <string name="composer_item_header_item_qty">Item Quantity</string>
    <string name="composer_add_success">Composer item created</string>
    <string name="composer_cancel_success">Composer action cancelled</string>
    <string name="composer_edit_success">Composer item adjusted</string>
    <string name="composer_remove_success">Composer item(s) removed</string>
    <string name="composer_dialog_track">Item track-able</string>
    <string name="composer_dialog_free">Limit qty</string>
    <string name="composer_dialog_qty" formatted="false">Quantity (%s): </string>
    <string name="composer_dialog_price_type">Price type :</string>
    <string name="composer_dialog_auto_apply">Auto Apply</string>
    <string name="modifier_hint">Short description</string>
    <string name="modifier_header_free">From inventory</string>
    <string name="modifier_header_cost">Item price</string>
    <string name="modifier_header_cost_total">Total item price</string>
    <string name="modifier_header_item">Title</string>
    <string name="modifier_group_edit">Edit Selected Group</string>
    <string name="modifier_group_delete">Remove Selected Group</string>
    <string name="modifier_group_dialog_label">Select the number of modifiers</string>
    <string name="modifier_add_success">Modifier item created</string>
    <string name="modifier_cancel_success">Modifier action cancelled</string>
    <string name="modifier_edit_success">Modifier item adjusted</string>
    <string name="modifier_remove_success">Modifier item(s) removed</string>
    <string name="cashier_action_order_list">Order list</string>
    <string name="cashier_action_prepaid">Prepaid</string>
    <string name="cashier_action_balance">EBT Balance</string>
    <string name="cashier_action_commission">Sales Person</string>
    <string name="cashier_action_search">Search</string>
    <string name="cashier_action_gift_card">Gift Card</string>
    <string name="cashier_action_item_account">Total Qty:</string>
    <string name="cashier_action_delete">Delete</string>
    <string name="cashier_action_serial">Serial management</string>
    <string name="cashier_action_composer">Composition items management</string>
    <string name="cashier_action_modifier">Modification items management</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_duplicate">Duplicate</string>
    <string name="cashier_action_search_by_code">Search by code</string>
    <string name="inventory_action_add_item">Add Item</string>
    <string name="inventory_action_sort">Sorting Mode</string>
    <string name="inventory_action_manage_categories">Manage Categories</string>
    <string name="inventory_action_manage_departments">Manage Departments</string>
    <string name="inventory_action_manage_tax_groups">Manage Tax Groups</string>
    <string name="inventory_action_manage_printer_alias">Manage Printer Alias</string>
    <string name="inventory_action_export">Export</string>
    <string name="inventory_action_import">Import</string>
    <string name="item_activity_price_type">Price type:</string>
    <string name="item_activity_discountable">Discountable:</string>
    <string name="item_activity_salable">For sale:</string>
    <string name="item_activity_discount_type">Discount type:</string>
    <string name="item_activity_discount_amount">Discount:</string>
    <string name="item_activity_taxable">Taxable:</string>
    <string name="item_activity_cost">Cost:</string>
    <string name="dashboard_action_options">Settings</string>
    <string name="dashboard_action_logout">Logout</string>
    <string name="dashboard_action_send_logs">Send dev log</string>
    <string name="dashboard_action_export_database">Export database</string>
    <string name="action_employee_add">Add employee</string>
    <string name="action_employee_tips_add">Add tips</string>
    <string name="item_commissions_eligible_label">Commission\neligible:</string>
    <string name="item_commissions_label">Commission (%):</string>
    <string name="inventory_import_type_full">Import all</string>
    <string name="inventory_import_type_qty">Update qty</string>
    <string name="inventory_import_type_price">Update price</string>
    <string name="inventory_import_type_delete">Batch delete</string>
    <string name="report_details_menu_email">Send by email</string>
    <string name="report_details_menu_print">Print</string>
    <string name="report_details_menu_export">Export</string>
    <string name="customers_header_name">Name</string>
    <string name="customers_header_address">Address</string>
    <string name="customers_header_email">E-mail</string>
    <string name="customers_header_phone">Phone</string>
    <string name="customers_header_sex">Sex</string>
    <string name="customers_header_create_date">Created</string>
    <string name="customers_header_consent_promotions">Promotions</string>
    <string name="dashboard_action_credit_receipts">Credit Receipts</string>
    <string name="variants_add">Add</string>
    <string name="variants_delete">Delete</string>
    <string name="variants_edit">Edit</string>
    <string name="choose_item_save_action">Your item has been saved. Would you like to add another item?</string>
</resources>