<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_action_action_search"
        android:id="@+id/action_search"
        android:title="@string/cashier_action_search"
        android:showAsAction="collapseActionView|always"
        android:actionViewClass="android.widget.SearchView"
        android:orderInCategory="@integer/menu_order_default"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort_item"
        android:showAsAction="always"
        android:title="@string/inventory_action_sort"
        android:orderInCategory="@integer/menu_order_default"
        />

    <item
        android:id="@+id/action_add_item"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="always"
        android:title="@string/inventory_action_add_item"
        android:orderInCategory="@integer/menu_order_default"
        />

    <item
        android:id="@+id/action_manage_categories"
        android:showAsAction="never"
        android:title="@string/inventory_action_manage_categories"
        android:orderInCategory="@integer/menu_order_default"/>

    <item
        android:id="@+id/action_manage_department"
        android:showAsAction="never"
        android:title="@string/inventory_action_manage_departments"
        android:orderInCategory="@integer/menu_order_default"/>

    <item
        android:id="@+id/action_manage_tax_groups"
        android:showAsAction="never"
        android:title="@string/inventory_action_manage_tax_groups"
        android:orderInCategory="@integer/menu_order_default"/>

    <item
        android:id="@+id/action_manage_printer_alias"
        android:showAsAction="never"
        android:title="@string/inventory_action_manage_printer_alias"
        android:orderInCategory="@integer/menu_order_default"/>

    <item
        android:id="@+id/action_export"
        android:showAsAction="never"
        android:title="@string/inventory_action_export"
        android:orderInCategory="@integer/menu_order_default"/>

    <item
        android:id="@+id/action_import"
        android:showAsAction="never"
        android:title="@string/inventory_action_import"
        android:orderInCategory="@integer/menu_order_default"/>
</menu>