<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/ItemList.HeaderLayout"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="0dp">

    <TextView
        style="@style/ItemList.HeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/orders_header_order_number"/>

    <TextView
        style="@style/ItemList.HeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/orders_header_sale_date"/>

    <TextView
        style="@style/ItemList.HeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/orders_header_total_price"/>

    <TextView
        style="@style/ItemList.HeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/orders_header_discount"/>

    <TextView
        style="@style/ItemList.HeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/orders_header_tax"/>

    <TextView
        style="@style/ItemList.HeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/orders_header_total"/>

</LinearLayout>