<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ItemList.HeaderLayout.1280"
    android:paddingLeft="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="6"
    android:background="@color/main_pages_bg_mint_color">

    <TextView
        android:id="@+id/header_name"
        style="@style/ItemList.HeaderText"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/customers_header_name"/>

    <TextView
        android:id="@+id/header_address"
        style="@style/ItemList.HeaderText"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1.75"
        android:gravity="center"
        android:text="@string/customers_header_address"/>

    <TextView
        android:id="@+id/header_email"
        style="@style/ItemList.HeaderText"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/customers_header_email"/>

    <TextView
        android:id="@+id/header_phone"
        style="@style/ItemList.HeaderText"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="0.75"
        android:gravity="center"
        android:text="@string/customers_header_phone"/>

    <TextView
        android:id="@+id/header_sex"
        style="@style/ItemList.HeaderText"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/customers_header_sex"/>

    <TextView
        android:id="@+id/header_created"
        style="@style/ItemList.HeaderText"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/customers_header_create_date"/>

    <TextView
        android:id="@+id/header_promotions"
        style="@style/ItemList.HeaderText"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/customers_header_consent_promotions"/>

</LinearLayout>

