<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/btn_barcode"
        android:id="@+id/action_serial"
        android:title="@string/cashier_action_serial"
        android:showAsAction="always"
        android:orderInCategory="@integer/menu_order_first"/>
    <item
        android:icon="@android:drawable/ic_dialog_dialer"
        android:id="@+id/action_composer"
        android:title="@string/cashier_action_composer"
        android:showAsAction="always"
        android:orderInCategory="@integer/menu_order_default"/>
    <item
        android:icon="@drawable/edit_item_modifications_white"
        android:id="@+id/action_modifier"
        android:title="@string/cashier_action_modifier"
        android:showAsAction="always"
        android:orderInCategory="@integer/menu_order_default"/>

    <item
        android:icon="@drawable/ic_action_delete"
        android:id="@+id/action_remove"
        android:title="@string/cashier_action_delete"
        android:showAsAction="always"
        android:orderInCategory="@integer/menu_order_default"/>

</menu>