<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_add_sub_item"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/variants_add" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_printer_settings"
        android:orderInCategory="200"
        android:showAsAction="always|withText"
        android:title="@string/variants_edit" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete_modifier_btn_bg"
        android:orderInCategory="300"
        android:showAsAction="always|withText"
        android:title="@string/variants_delete"/>
</menu>