<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="match_parent"
              android:padding="16dp">

    <RadioGroup
        android:id="@+id/import_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton

            style="@style/ImportType.Item"
            android:id="@+id/import_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_import_type_full"/>

        <RadioButton
            style="@style/ImportType.Item"
            android:id="@+id/import_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_import_type_qty"/>

        <RadioButton
            style="@style/ImportType.Item"
            android:id="@+id/import_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_import_type_price"/>

        <RadioButton
            style="@style/ImportType.Item"
            android:id="@+id/batch_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_import_type_delete"/>

    </RadioGroup>

</LinearLayout>