<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_action_action_search"
        android:id="@+id/action_search"
        android:title="@string/cashier_action_search"
        android:showAsAction="collapseActionView|always"
        android:actionViewClass="android.widget.SearchView"
        android:orderInCategory="@integer/menu_order_default"/>

    <item
        android:icon="@drawable/ic_action_add"
        android:id="@+id/action_add"
        android:showAsAction="always"
        android:title="@string/action_employee_add"
        android:orderInCategory="@integer/menu_order_default"/>

    <item
        android:id="@+id/action_add_tips"
        android:showAsAction="never"
        android:enabled="false"
        android:title="@string/action_employee_tips_add"
        android:orderInCategory="@integer/menu_order_default"/>
</menu>