<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:paddingTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/light_gray"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/choose_item_save_action" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/btn_no"
            style="@style/CheckBox.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginBottom="12dp"
            android:text="@string/btn_no" />

        <CheckBox
            android:id="@+id/btn_yes"
            style="@style/CheckBox.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/btn_yes" />

        <CheckBox
            android:id="@+id/btn_dup"
            style="@style/CheckBox.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_duplicate" />

    </LinearLayout>
</LinearLayout>